discussion/kv_engine/173418/173418_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51556: Re-add Monotonic labels to ADM::ResolvedQueue

Re-add labels for instances Monotonic<> that used to have a label,
using the new interface for generating a label for each monotonic.

Change-Id: I8f77420106a7976b9dedd21b972d5ad49aac4625

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-04-07 12:31:31.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 12:46:59.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45062/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\dcp/active_stream.h(591): error C2061: syntax error: identifier "lastReadSeqno" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45062/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37851/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.h:591:33:
error: unknown type name "lastReadSeqno"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37851/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16464/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:936:5: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    ATOMIC_MONOTONIC3(int64_t, lastBySeqno, Labeller);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:936:32: error: unknown type name "lastBySeqno" [clang-diagnostic-error]
    ATOMIC_MONOTONIC3(int64_t, lastBySeqno, Labeller);
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:944:5: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    MONOTONIC3(int64_t, maxVisibleSeqno, Labeller);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:944:25: error: unknown type name "maxVisibleSeqno" [clang-diagnostic-error]
    MONOTONIC3(int64_t, maxVisibleSeqno, Labeller);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:67:41: error: member initializer "highEnqueuedSeqno" does not name a non-static data member or base class [clang-diagnostic-error]
    explicit ResolvedQueue(Vbid vbid) : highEnqueuedSeqno(0, {vbid}) {
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:80:9: error: use of undeclared identifier "highEnqueuedSeqno" [clang-diagnostic-error]
        highEnqueuedSeqno = sw.getBySeqno();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:119:9: error: use of undeclared identifier "highEnqueuedSeqno" [clang-diagnostic-error]
        highEnqueuedSeqno.reset(0);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:138:5: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    MONOTONIC4(int64_t, highEnqueuedSeqno, Labeller, ThrowExceptionPolicy);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:138:25: error: unknown type name "highEnqueuedSeqno" [clang-diagnostic-error]
    MONOTONIC4(int64_t, highEnqueuedSeqno, Labeller, ThrowExceptionPolicy);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:138:54: error: use of class template "ThrowExceptionPolicy" requires template arguments; argument deduction not allowed in function prototype [clang-diagnostic-error]
    MONOTONIC4(int64_t, highEnqueuedSeqno, Labeller, ThrowExceptionPolicy);
                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/monotonic.h:38:8: note: template is declared here
struct ThrowExceptionPolicy {
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability/active_durability_monitor.cc:147:44: error: no member named "highEnqueuedSeqno" in "ActiveDurabilityMonitor::ResolvedQueue" [clang-diagnostic-error]
           << ", highEnqueuedSeqno:" << rq.highEnqueuedSeqno;
                                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16464/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:936:5:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16464/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6120/ : FAILURE

Compile error at [2022-04-07T12:41:11.699Z] ../kv_engine/engines/ep/src/dcp/active_stream.h:591:33:
error: unknown type name "lastReadSeqno"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6120/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19268/ : FAILURE

Compile error at [2022-04-07T12:41:42.419Z] ../kv_engine/engines/ep/src/dcp/active_stream.h:591:33:
error: unknown type name "lastReadSeqno"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19268/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18237/ : FAILURE

Compile error at [2022-04-07T12:41:25.393Z] ../kv_engine/engines/ep/src/dcp/active_stream.h:591:33:
error: ?lastReadSeqno? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18237/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17332/ : FAILURE

Compile error at [2022-04-07T12:33:56.920Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/active_stream.h:591:33:
error: C++ requires a type specifier for all declarations
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17332/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26647/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6180/ : FAILURE

Compile error at [2022-04-07T12:44:42.021Z] ../kv_engine/engines/ep/src/dcp/active_stream.h:591:33:
error: ?lastReadSeqno? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6180/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18573/ : FAILURE

Compile error at [2022-04-07T12:40:47.669Z] ../kv_engine/engines/ep/src/dcp/active_stream.h:591:33:
error: ?lastReadSeqno? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18573/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15396/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-04-07 14:41:58.000000000
Message: 
Patch Set 1: Code-Review-1

(1 comment)
Line:129, engines/ep/src/durability/active_durability_monitor.cc -> struct

----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2022-04-07 15:07:20.000000000
Message: 
Patch Set 1:

(1 comment)
Line:129, engines/ep/src/durability/active_durability_monitor.cc -> Done

----------------------------------------------------------------------------------------------------------------------
